--- a/TartarusHall/TartarusHall.vcxproj.filters
+++ b/TartarusHall/TartarusHall.vcxproj.filters
@@ -21,13 +21,10 @@
     <ClCompile Include="ApiHashing.c">
       <Filter>Archivos de recursos</Filter>
     </ClCompile>
-    <ClCompile Include="WinApi.c">
+    <ClCompile Include="Win32.c">
       <Filter>Archivos de recursos</Filter>
     </ClCompile>
     <ClCompile Include="TartarusHall.c">
-      <Filter>Archivos de recursos</Filter>
-    </ClCompile>
-    <ClCompile Include="XOR.c">
       <Filter>Archivos de recursos</Filter>
     </ClCompile>
     <ClCompile Include="Structs.h">
@@ -40,6 +37,9 @@
       <Filter>Archivos de recursos</Filter>
     </ClCompile>
     <ClCompile Include="Debug.c">
+      <Filter>Archivos de recursos</Filter>
+    </ClCompile>
+    <ClCompile Include="RC4.c">
       <Filter>Archivos de recursos</Filter>
     </ClCompile>
   </ItemGroup>
